Don't force block for display:contents legend.

A legend with display:contents is not a rendered legend. See:

https://html.spec.whatwg.org/multipage/rendering.html#rendered-legend

This fixes a wpt test for display:contents.

Bug: 795219
Change-Id: Ib23e7da0491e36c3f4880eaac3c9d704a6730cc3
Reviewed-on: https://chromium-review.googlesource.com/832458
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524993}
Former-commit-id: 34f26f3449a4cf754afd750db3cacc48c03a3dcd